# teaching

./: DiscPoissonSolver_FBMD.ipynb  README.md  amm_density_basic.ipynb  classical_iterative_&_relaxation_methods.ipynb  contour_integration.ipynb  demo_KPP_steady_states.ipynb  demo_LV_model.ipynb  demo_brusselator.ipynb  expint_basic.ipynb  full_partial_sum_demo.ipynb  gause_bayes.ipynb  gibbs_phenomenon.ipynb  hmc_sampling_gaussian.ipynb  ks.ipynb  laplace_square.ipynb  lin_sys_demo_1_real_eigvals.ipynb  mcmc_bimodal.ipynb  mcmc_sampling_gaussian.ipynb  mh_convergence.ipynb  multigrid_intro.ipynb  plotting_tips.tex  runge_phenomenon.ipynb  spectral_differentiation_nonperiodic.ipynb  spectral_differentiation_periodic.ipynb
fortran_sdes/: CMakeLists.txt  gbm_ensemble.f90  wiener_ensemble.f90  wiener_process_demo.ipynb
fortran_transport_eqn/: read_utils.f90  time_stepper.f90  transport.f90  transport_solver_framework.ipynb
